Holiday callender ui updates

--- a/mytime-ui/src/app/admin/components/create-city.component.html
+++ b/mytime-ui/src/app/admin/components/create-city.component.html
@@ -40,7 +40,7 @@
 
                     <option value="">Select State</option>
 
-                    <option *ngFor="let s of filteredStates" [value]="s.StateId">
+                    <option *ngFor="let s of states" [value]="s.StateId">
                         {{ s.Name }}
                     </option>
 
