--- a/mytime-ui/src/app/layout/user-sidebar.component.html
+++ b/mytime-ui/src/app/layout/user-sidebar.component.html
@@ -5,7 +5,7 @@
               <span class="menu-title">Dashboard</span>
             </a>
           </li>
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
               <i class="icon-disc menu-icon"></i>
               <span class="menu-title">UI Elements</span>
@@ -63,5 +63,5 @@
               <i class="icon-book menu-icon"></i>
               <span class="menu-title">Documentation</span>
             </a>
-          </li> -->
+          </li>
         </ul>
