--- a/mytime-ui/src/app/admin/components/employees/employment/employees-employement-list.component.html
+++ b/mytime-ui/src/app/admin/components/employees/employment/employees-employement-list.component.html
@@ -6,7 +6,7 @@
                         <div class="d-flex align-items-center">
                             <h5 class="mb-0">
                                 <i class="mdi mdi-school text-primary me-2"></i>
-                                Employeement Details
+                                Employeements
                             </h5>
                             <span class="badge bg-light text-dark ms-3">
                                 <span class="text-primary fw-bold">{{ getTotalRowsCount() }}</span> records
