fixed user fetching from api

--- a/mytime-ui/src/app/layout/admin-sidebar.component.html
+++ b/mytime-ui/src/app/layout/admin-sidebar.component.html
@@ -10,7 +10,7 @@
   <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#core" aria-expanded="false" aria-controls="core">
       <i class="icon-disc menu-icon"></i>
-      <span class="menu-title">Core Management</span>
+      <span class="menu-title">Core</span>
       <i class="mdi mdi-chevron-down menu-arrow"></i>
     </a>
     <div class="collapse" id="core">
@@ -31,7 +31,7 @@
   <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#user" aria-expanded="false" aria-controls="user">
       <i class="mdi mdi-account-group-outline menu-icon"></i>
-      <span class="menu-title">User Management</span>
+      <span class="menu-title">User</span>
       <i class="mdi mdi-chevron-down menu-arrow"></i>
     </a>
     <div class="collapse" id="user">
@@ -50,7 +50,7 @@
 <li class="nav-item">
   <a class="nav-link" data-toggle="collapse" href="#employee" aria-expanded="false" aria-controls="employee">
     <i class="mdi mdi-briefcase-account-outline menu-icon"></i>
-    <span class="menu-title">Employee Management</span>
+    <span class="menu-title">Employee</span>
     <i class="mdi mdi-chevron-down menu-arrow"></i>
   </a>
   <div class="collapse" id="employee">
@@ -94,7 +94,7 @@
   <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#timesheet" aria-expanded="false" aria-controls="timesheet">
       <i class="mdi mdi-clock-outline menu-icon"></i>
-      <span class="menu-title">Time Management</span>
+      <span class="menu-title">Time</span>
       <i class="mdi mdi-chevron-down menu-arrow"></i>
     </a>
     <div class="collapse" id="timesheet">
